css/setting_page.css
#setting-page {
    padding: 70px 80px;
}
#setting-page .top-logo{
    width: 176px;
    height: 50px;
}
#setting-page .page-timer{
    top:60px;
}
#setting-menus-container {
    margin-top: 60px;
}
.setting-page-title {
    color: #ddd;
    font-size: 50px;
    margin-bottom: 40px;
    font-weight: normal;
}
.setting-items-container {
    margin-bottom: 40px;
}
.setting-menu-item-container {
    display: inline-block;
    color: #ddd;
    font-size: 30px;
    margin-right: 50px;
    vertical-align: middle;
}
.setting-menu-item-container.more-link-item-container {
    margin-right: 20px;
}
.setting-menu-item-title {
    margin-bottom: 15px;
    font-weight: normal;
    height: 45px;
}
.setting-menu-item-wrapper{
    background: #362D3D;
    border-radius: 5px;
    overflow: hidden;
    font-size: 0;
}
.setting-menu-item-wrapper:not(.more-link-item){
    width: 350px;
}

.setting-menu-item-wrapper.long {
    width: 600px;
}
.setting-menu-item-wrapper.more-link-item {
    padding: 10px 30px;
}
.setting-menu-item-sub-wrapper {
    display: inline-block;
    width: 30%;
    font-size: 30px;
    text-align: center;
    vertical-align: middle;
    font-weight: normal;
}
.buffer-size {
    margin-right: 5px;
    font-weight: normal;
}
.setting-menu-item-sub-wrapper.middle {
    width: 40%;
    padding: 18px;
    background: #483D50;
}
.setting-menu-color-element {
    height: 55px;
    border: 3px solid #ddd;
    transition: all 0.2s;
}
.setting-menu-item {
    padding: 20px 20px;
    text-align: center;
    font-size: 30px;
    border: 3px solid transparent;
    transition: all 0.2s;
    font-weight: normal;
}
.settig-menu-item * {
    font-weight: normal;
}
.setting-menu-arrow-icon {
    width: 20px;
}
.setting-menu-item.active {
    /*border-color: #ffff00;*/
}
.setting-menu-item-icon-container {
    display: inline-block;
    vertical-align: middle;
    margin-right: 10px;
}
.setting-menu-item-icon-container img {
    width: 50px;
}
.setting-menu-item-text {
    display: inline-block;
    vertical-align: middle;
    font-weight: normal;
}
.parent-modal-btns-container {
    margin-top: 50px;
}
.parent-control-modal-button{
    display: inline-block;
    width: 250px;
    margin: 0 50px;
}
#select-video-kind-modal .modal-content{
    height: 60vh;
}
.setting-modal .modal-content{
    background: #2D0F2E;
    padding:40px;
}
#terms-modal .modal-content {
    background: transparent;
    padding:0;
}
#terms-modal-content-wrapper{
    background: #2D0F2E;
    padding:40px;
}
.setting-modal-contents-wrapper.vertical-center {
    position: absolute;
    right: 20%;
    left: 20%;
    top: 50%;
    transform: translateY(-50%);
}
.select-video-kind-item, .playlist-item-container {
    color: #ddd;
    font-size: 30px;
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 2px;
    background: #33253C;
    margin-bottom: 15px;
    padding: 15px;
    border-radius: 5px;
}
.select-video-kind-item:last-of-type, .playlist-item-container:last-of-type {
    margin-bottom: 0;
}
.select-video-kind-item.active, .playlist-item-container.active {
    /*background: #F50561;*/
    color: #fff;
}
#playlist-items-container{
    position: relative;
    max-height: 60vh;
    overflow-y: scroll;
}
#playlist-error {
    color: #f1891b;
    font-size: 30px;
    text-align: center;
    margin-bottom: 20px;
    font-weight: normal;
}
.modal-content.has-sidebar{
    font-size: 0;
}
.modal .side-bar {
    display: inline-block;
    vertical-align: top;
}
.modal .side-bar.left {
    background: #2D0F2E;
    width:70%;
}
.modal .side-bar.right {
    width:30%;
    padding-left:20px;
}
.setting-modal-title {
    font-size: 40px;
    color: #ddd;
    padding: 20px 30px;
    border-bottom: 2px solid #937DA1;
    margin-bottom: 0;
}
.setting-modal-btn {
    font-size: 30px;
    color: #ddd;
    text-align: center;
    padding: 15px 50px;
    background: #33253C;
    border-radius: 5px;
    margin-bottom: 20px;
    transition: all 0.2s;
}
/*.setting-modal-btn.active{*/
/*    background: #F50561;*/
/*}*/
#hide-category-modal .modal-dialog, #time-format-modal .modal-dialog{
    width: 1300px;
    max-width: 1300px;
}
.setting-modal-sidebar-contents-wrapper {
    padding: 15px 15px;
    min-height: 200px;
    position: relative;
}
/*#lock-playlist-modal .setting-modal-sidebar-contents-wrapper {*/
/*    padding:20px 30px;*/
/*}*/
#hide-modal-categories-container {
    max-height: 60vh;
    overflow: hidden;
    position: relative;
}


.setting-modal-option{
    padding: 10px 20px;
    border-radius: 5px;
    color:#fff;
}
/*.setting-modal-option.active{*/
/*    background: #F50561;*/
/*}*/
.setting-modal-checkbox {
    position: absolute;
    display: none;
}
.setting-modal-checkbox + label {
    position: relative;
    display: block;
    padding-right: 60px;
    font-size: 30px;
    cursor: pointer;
    vertical-align: middle;
    margin-bottom: 0 !important;
}
.setting-modal-checkbox + label:before {
    position: absolute;
    top: 6px;
    right: 0;
    display: inline-block;
    width: 35px;
    height: 35px;
    content: '';
    border: 3px solid #C0B7C0;
}
.setting-modal-checkbox + label:after {
    position: absolute;
    display: none;
    content: '';
}
.setting-modal-checkbox:checked + label:before {
    animation-name: none;
}
.setting-modal-checkbox:checked + label:after {
    display: block;
}
.setting-modal-checkbox + label:before {
    border-radius: 3px;
}

.setting-modal-checkbox + label:after {
    top: 10px;
    right: 9px;
    box-sizing: border-box;
    width: 16px;
    height: 21px;
    transform: rotate(40deg);
    border-width: 3px;
    border-style: solid;
    border-color: #222;
    border-top: 0;
    border-left: 0;
}

.setting-modal-checkbox:checked + label:before {
    border: #80CBC4;
    background: #80CBC4;
}

.setting-modal-checkbox:checked[disabled] + label:before {
    border: #c9e2f9;
    background: #c9e2f9;
}

.setting-modal-checkbox:checked + label:before {
    border:#ddd;
}

.setting-modal-option.active .setting-modal-checkbox + label:before{
    border-color: #111;
}
.setting-modal-option.active .setting-modal-checkbox:checked + label:before{
    border-color: #c9e2f9;
}

#parent-control-modal .modal-content, #user-account-modal .modal-content, #parent-confirm-modal .modal-content, #lock-playlist-modal .modal-content {
    padding:0;
}
#user-account-modal .setting-modal-title{
    padding:40px 30px;
}
.user-account-contents-wrapper {
    padding: 40px;
}
.user-account-item-wrapper{
    font-size: 30px;
    color: #eee;
    white-space: nowrap;
    margin-bottom: 25px;
}
.user-account-label{
    display: inline-block;
    vertical-align: middle;
    width: 50%;
    font-weight: normal;
}
.user-account-value{
    display: inline-block;
    vertical-align: middle;
    width: 50%;
    font-weight: 600;
}
.privacy-modal .modal-dialog{
    width: 1400px;
    max-width: 1400px;
}
.privacy-modal-content *{
    color:#ddd;
    text-align: justify;
    font-weight: normal;
}
.privacy-modal-content .header-title{
    font-size: 40px;
    font-weight: bold;
}
.privacy-modal-content .header-description{
    font-size: 28px;
    margin-top: 20px;
}
.privacy-modal-content .section{
    margin-top: 40px;
}
.privacy-modal-content .section-title{
    font-size: 32px;
    font-weight: bold;
}
.privacy-modal-content .section-content{
    font-size: 28px;
    margin-top: 15px;
}
.privacy-modal-content .link{
    color: #e97008;
    font-style: oblique;
}
.privacy-modal-content {
    max-height: 60vh;
    overflow-y: scroll;
    position: relative;
}
#terms-modal-btns-container {
    margin-top: 20px;
}
.terms-modal-button{
    display: inline-block;
    width: 300px;
    margin-left: 50px;
}
#turn-off-modal .modal-content, #clear-cache-modal .modal-content{
    padding:50px 40px;
}
#lock-state-message {
    font-size: 25px;
    color: #fbde00;
    font-weight: normal;
    margin-top: 5px;
    overflow: hidden;
    opacity: 0;
    transition: all 0.2s;
}
#lock-state-message.error{
    color: #fb4902;
}
#lock-state-message.visible{
    opacity: 1;
    transition: none;
}

